--- a/KTPC_luncher.vcxproj
+++ b/KTPC_luncher.vcxproj
@@ -50,8 +50,9 @@
     <IntDir>$(SolutionDir)Intermediate\$(ProjectName)\Debug\Intermediate\</IntDir>
     <TargetName>$(ProjectName)(debug)</TargetName>
     <LocalDebuggerWorkingDirectory>$(ProjectDir)App</LocalDebuggerWorkingDirectory>
-    <IncludePath>$(SolutionDir)\MySiv3D\include;$(SolutionDir)\MySiv3D\include\ThirdParty;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)\MySiv3D\lib\Windows;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)\ThirdParty\MySiv3D\include;$(SolutionDir)\ThirdParty\MySiv3D\include\ThirdParty;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\ThirdParty\MySiv3D\lib\Windows;$(LibraryPath)</LibraryPath>
+    <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -75,6 +76,8 @@
       <AdditionalOptions>/Zc:__cplusplus /utf-8 %(AdditionalOptions)</AdditionalOptions>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <ForcedIncludeFiles>stdafx.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <AdditionalIncludeDirectories>$(SolutionDir)\ThirdParty\</AdditionalIncludeDirectories>
+      <EnablePREfast>true</EnablePREfast>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -169,6 +172,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
+    <None Include="App\data.schema.json" />
     <None Include="App\dll\soundtouch\SoundTouch_x64.dll" />
     <None Include="App\engine\font\fontawesome\fontawesome-brands.otf.zstdcmp" />
     <None Include="App\engine\font\fontawesome\fontawesome-solid.otf.zstdcmp" />
@@ -296,7 +300,6 @@
     <None Include="App\example\toml\test.toml" />
     <None Include="App\example\zip\zip_test.zip" />
     <None Include="data.json" />
-    <None Include="data.schema.json" />
   </ItemGroup>
   <ItemGroup>
     <Media Include="App\example\shot.mp3" />
@@ -318,8 +321,10 @@
   <ItemGroup>
     <ClInclude Include="ExpressionFunctor.hpp" />
     <ClInclude Include="LerpTransition.hpp" />
+    <ClInclude Include="ListDrawer.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Units.hpp" />
+    <ClInclude Include="Utility.hpp" />
     <ClInclude Include="Viewport.hpp" />
     <ClInclude Include="CurryGenerator.hpp" />
   </ItemGroup>
@@ -408,4 +413,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties data_1json__JsonSchema="App\data.schema.json" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
