--- a/KTPC_luncher.vcxproj
+++ b/KTPC_luncher.vcxproj
@@ -335,6 +335,7 @@
     <ClInclude Include="ListDrawer.hpp" />
     <ClInclude Include="Load.hpp" />
     <ClInclude Include="rivet.hpp" />
+    <ClInclude Include="Settings.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="UnicodeProperty.hpp" />
     <ClInclude Include="Units.hpp" />
